Adjusting Unit Test